# saas-research

./: .gitignore  README.md  main.py  pyproject.toml
langchain_agent/: __init__.py
langchain_agent/agents/: base_agent.py  market_agent.py  researcher_agent.py  saas_finder_agent.py
langchain_agent/lib/prompts/: market_analysis.py  research.py  saas_finder.py  supervisor.py
langchain_agent/tools/: __init__.py  analysis.py  chart_generator.py  web_search.py
langchain_agent/utils/: __init__.py  agents.py  config.py  logger.py  response_utils.py
tests/: test_response_utils.py
